# fastcrawler

./: .gitignore  .isort.cfg  .pre-commit-config.yaml  LICENSE  README.md  checks.sh  justfile  pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg  tox.ini
.github/ISSUE_TEMPLATE/: PULL_request_template.md  bug.yml  config.yml  feature.yml
.github/workflows/: format.yml  lint.yml  publish.yml  test.yml  typecheck.yml
benchmark/: fast.py  scrap.py  web.py
docs/en/: mkdocs.yml
docs/en/data/: github_sponsors.yml
docs/en/docs/: fastcrawler-people.md  features.md  index.md
docs/en/docs/advanced/: customizing-engine.md  customizing-logging.md  customizing-parser.md
docs/en/docs/tutorial/: DIP-in-fastcrawler.md  index.md  spider-and-process-with-saving-data.md
docs/en/overrides/: main.html
docs_src/initilizing_project/sample1/: main.py  wikipedia.py
docs_src/initilizing_project/sample2/: imdb.py  main.py  wikipedia.py
docs_src/logger/: tutorial001.py
docs_src/processor/: tutorial001.py
fastcrawler/: __init__.py  exceptions.py  prototype.py  test_utils.py
fastcrawler/core/: __init__.py  app.py  contracts.py  crawler.py  process.py  registery.py  spider.py
fastcrawler/engine/: __init__.py  aio.py  base.py  contracts.py  playwright.py  proto.py
fastcrawler/logger/: __init__.py  _contracts.py  adopter.py  contracts.py  schema.py
fastcrawler/middleware/: base.py
fastcrawler/parsers/: __init__.py  base.py  contracts.py  html.py  json.py  models.py  proto.py  pydantic.py  schema.py  utilities.py  utils.py
fastcrawler/parsers/processor/: _lxml.py  interface.py
fastcrawler/parsers/processors/: base.py  contracts.py  lxml.py  modest.py
fastcrawler/parsers/selectors/: base.py  contracts.py  css.py  regex.py  xpath.py
fastcrawler/schedule/: __init__.py  adopter.py  api.py  app.py  contracts.py  main.py  manager.py  proto.py  schema.py  utilties.py
fastcrawler/test_utils/: __init__.py  endpoint.py  endpoints.py  routes.py  test_engine.py  test_server.py  utils.py
fastcrawler/utils/: __init__.py  injection.py
requirements/: base.txt  local.txt  test.txt  typing.txt
test/: .coveragerc  conftest.py  pytest.ini  test_engine.py  test_engine_playwright.py  test_injections.py  test_logger.py  test_parser.py  test_registery.py  test_schedule.py  test_test_server.py
test/core/: registery.py  test_app_no_schedule.py  test_process_start.py  test_process_stop.py  test_registery.py  test_spider_options.py
test/shared/: _fastapi.py  core.py  engine.py  mock_html.py  mock_json.py  sample_html_file.html  sample_json_file.json  schema.py  test_server.py
test/shared/fastapi/: README.md  test_server.py  uvicorn.log.yaml
tests/: tests_parser.py
