[build-system]
requires = ["setuptools", "wheel", "flit_core >=2,<3"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 120
target-version = ['py39', 'py310']

[tool.flit.metadata.requires-extra]
all = [
    "typer >=0.7.0,<1.0.0",
    "colorama >=0.4.3,<0.5.0",
    "shellingham >=1.3.0,<2.0.0",
    "rich >=10.11.0,<14.0.0",
]