[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools", "wheel", "flit_core >=2,<3"]

[tool.black]
line-length = 99
target-version = ['py311']

[tool.flit.metadata.requires-extra]
all = [
  "typer >=0.7.0,<1.0.0",
  "colorama >=0.4.3,<0.5.0",
  "shellingham >=1.3.0,<2.0.0",
  "rich >=10.11.0,<14.0.0",
]

[tool.mypy]
exclude = ["docs_src"]
python_version = "3.11"
