[metadata]
name = fastcrawler
version = 0.0.1
description = fastest Web crawling framework based on asyncio.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/daneah/publishing-python-packages
license = MIT License
license_files = LICENSE
classifiers =
    License :: OSI Approved :: MIT License

[options]
python_requires = >=3.9
package_dir =
    =src
packages = find_namespace:
include_package_data = True

[options.packages.find]
where = src
exclude =
    test*

######################
# Tool configuration #
######################

[mypy]
python_version = 3.10
warn_unused_configs = True
show_error_context = True
pretty = True
namespace_packages = True
check_untyped_defs = True

[flake8]
max-line-length = 120

[tool:pytest]
testpaths = test
addopts = --cov --strict-markers
xfail_strict = True

[coverage:run]
source = tsp_wrapper
branch = True

[coverage:report]
fail_under = 9.0
show_missing = True
skip_covered = True

[coverage:paths]
source =
    src/tsp_wrapper
    */site-packages/tsp_wrapper

[tox:tox]
envlist = py39,py310
isolated_build = True

[testenv]
deps =
    -r requirements/test.txt
    pytest
    pytest-cov
commands =
    pytest {posargs}

[testenv:typecheck]
deps =
    mypy
    pytest
    types-termcolor
commands =
    mypy --ignore-missing-imports {posargs:src test}

[testenv:format]
skip_install = True
deps =
    black
commands =
    black {posargs:--check --diff src test}

[testenv:lint]
skip_install = True
deps =
    flake8
    flake8-bugbear
commands =
    flake8 {posargs:src test}

[testenv:docs]
deps =
    sphinx
commands =
    sphinx-apidoc \
        --force \
        --implicit-namespaces \
        --module-first \
        --separate \
        -o docs/reference/ \
        src/tsp_wrapper/ \
        src/tsp_wrapper/*.c \
        src/tsp_wrapper/*.so
    sphinx-build -n -W --keep-going -b html docs/ docs/_build/

[testenv:devdocs]
deps =
    sphinx
    sphinx-autobuild
commands =
    sphinx-apidoc \
        --force \
        --implicit-namespaces \
        --module-first \
        --separate \
        -o docs/reference/ \
        src/tsp_wrapper/ \
        src/tsp_wrapper/*.c \
        src/tsp_wrapper/*.so
    sphinx-autobuild -n -W -b html docs/ docs/_build/
